--- a/index.html
+++ b/index.html
@@ -5,33 +5,30 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Quick Game Info</title>
+	<title>VGLookup</title>
+  <link href="https://fonts.googleapis.com/css?family=Domine|Roboto" rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="index.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
-
-	</script>
 </head>
 
 <body>
-	<div class="container">
-		<h1>Quick Game Info</h1>
-
-		<form id="js-form">
-			<label for="search-term">Please Enter the Title</label>
+	<!-- <div class="container"> -->
+		<div class="menu">
+        <h1 class="full-text">VG Lookup</h1>
+        <h1 class="short-text">VGL</h1>
+        <p class="subtitle"> Quick Resource for Video Games</p>
+			<form id="js-form">
+				<label for="search-term">Type in a Title</label>
             <input type="text" name="search-term" id="js-search-term" required>
-
-
-            <input type="submit" value="Search">
+            <input type="submit" value="Search" id="js-search-button">
         </form>
-
+    </div>
         <p id="js-error-message" class="error-message"></p>
         <section id="results" class="hidden">
-          <h2>Results</h2>
           <ul id="results-list">
-          </ul>
-          
+          </ul>          
         </section>
-    </div>
+    <!-- </div> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
 </html>
